[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-poc"
version = "1.0.0"
authors = [
  { name="Giuseppe Frattura", email="giuseppefrattura@gmail.com.eu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"